# devops-demo-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  run.py
.github/workflows/: ci.yaml
database/: db.py  models.py
demo/: __init__.py
migrations/: env.py
migrations/versions/: 0c66dcb39eaf_init.py  8dbd92e6bb23_seed_data.py
